# job_schedular

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
job_schedular/: db.sqlite3
job_schedular/config/: settings.py  urls.py
job_schedular/schedular/: apis.py  models.py  schema.py  tasks.py
job_schedular/schedular/migrations/: 0001_initial.py
